refactor: clean up TikTokConnector imports, use pattern matching instanceof, and register onLiveEnded handler